cabal-version: 2.2

name:           aoc
version:        0
build-type:     Simple

library
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-unused-imports
  build-depends:
      base
    -- , cereal
    , lens
    , megaparsec
    , mtl
    -- , optparse-applicative
    , resourcet
    , rio
    , time
    , unliftio
  default-extensions:
      ConstraintKinds
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NoImplicitPrelude
      OverloadedStrings
      RankNTypes
      TemplateHaskell
      TupleSections
      TypeFamilies

  exposed-modules:
      Hub
